[Java] RTT benchmark harness (#4)
Adds harness for benchmarking latency (i.e. round trip times). It consists of the following key elements:
- `uk.co.real_logic.benchmarks.rtt.LoadTestRig` that runs the benchmark
- `uk.co.real_logic.benchmarks.rtt.MessageTransceiver` an SPI to be implemented by the systems under test
- `uk.co.real_logic.benchmarks.rtt.Configuration` class that allows configuring different aspects of the benchmark.

This PR also contains code for the following Aeron benchmarks:
- Simple round trip test (aka ping-pong), i.e. `uk.co.real_logic.benchmarks.rtt.aeron.PlainMessageTransceiver` with `uk.co.real_logic.benchmarks.rtt.aeron.EchoNode`
- Live replay from remote archive, i.e. `uk.co.real_logic.benchmarks.rtt.aeron.LiveReplayMessageTransceiver` with `uk.co.real_logic.benchmarks.rtt.aeron.ArchiveNode`
- Live replay from local archive, i.e. `uk.co.real_logic.benchmarks.rtt.aeron.ArchiveMessageTransceiver` with `uk.co.real_logic.benchmarks.rtt.aeron.LiveReplayNode`
- Live recording of the remote stream, i.e. `uk.co.real_logic.benchmarks.rtt.aeron.LiveRecordingMessageTransceiver` with `uk.co.real_logic.benchmarks.rtt.aeron.EchoNode` 

Sample usage:
```bash
java -cp build/libs/benchmarks.jar -Daeron.benchmarks.rtt.messages=1000000 -Daeron.benchmarks.rtt.messageTransceiver=uk.co.real_logic.benchmarks.rtt.InMemoryMessageTransceiver uk.co.real_logic.benchmarks.rtt.LoadTestRig
```
And the corresponding output:
```
Starting latency benchmark using the following configuration:
Configuration{
    warmUpIterations=5
    warmUpNumberOfMessages=1000
    iterations=30
    numberOfMessages=1000000
    batchSize=1
    messageLength=8
    messageTransceiverClass=uk.co.real_logic.benchmarks.rtt.InMemoryMessageTransceiver
    senderIdleStrategy=NoOpIdleStrategy{}
    receiverIdleStrategy=NoOpIdleStrategy{}
}

Running warm up for 5 iterations of 1,000 messages with burst size of 1...
Send rate 1,000 msg/sec
Send rate 1,000 msg/sec
Send ra